feat: updated style for choose action overlay
created new ActionRow component

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -101,6 +101,7 @@
   "connectToServerSuccess": "Successfully connected to community",
   "contactAvatarAlt": "Avatar for contact $name$",
   "contactsHeader": "Contacts",
+  "contactsNone": "You don't have any contacts yet",
   "contextMenuNoSuggestions": "No Suggestions",
   "continue": "Continue",
   "conversationsHeader": "Contacts and Groups: $count$",
@@ -368,7 +369,7 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "onlyGroupAdminsCanChange": "Only group admins can change this setting.",
-  "onsErrorNotRecognised": "We couldn't recognise this ONS. Please check it and try again.",
+  "onsErrorNotRecognized": "We couldn't recognize this ONS. Please check it and try again.",
   "onsErrorUnableToSearch": "We were unable to search for this ONS. Please try again later.",
   "open": "Open",
   "openGroupInvitation": "Community invitation",
