feat: invite a friend screen is mostly done

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -104,8 +104,8 @@
   "contactsNone": "You don't have any contacts yet",
   "contextMenuNoSuggestions": "No Suggestions",
   "continue": "Continue",
-  "conversationsHeader": "Contacts and Groups: $count$",
   "conversationId": "Conversation ID",
+  "conversationsHeader": "Contacts and Groups: $count$",
   "conversationsNone": "You don't have any conversations yet",
   "conversationsSettingsTitle": "Conversations",
   "copiedToClipboard": "Copied",
@@ -458,6 +458,8 @@
   "sendMessage": "Message",
   "sent": "Sent",
   "serverId": "Server ID",
+  "sessionInviteAFriend": "Invite a Friend",
+  "sessionInviteAFriendDescription": "Copy your Account ID then share it with your friends so they can message you.",
   "sessionMessenger": "Session",
   "sessionRecoveryPassword": "Recovery Password",
   "set": "Set",
