feat: finished invite a friend overlay

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2,6 +2,7 @@
   "about": "About",
   "accept": "Accept",
   "accountIDCopy": "Copy Account ID",
+  "accountIDCopied": "Account ID Copied",
   "accountIdEnter": "Enter Account ID",
   "accountIdErrorInvalid": "This Account ID is invalid. Please check and try again.",
   "accountIdOrOnsEnter": "Enter Account ID or ONS",
@@ -460,6 +461,7 @@
   "serverId": "Server ID",
   "sessionInviteAFriend": "Invite a Friend",
   "sessionInviteAFriendDescription": "Copy your Account ID then share it with your friends so they can message you.",
+  "sessionInviteAFriendIDCopied": "Share with your friends wherever you usually speak with them — then move the conversation here.",
   "sessionMessenger": "Session",
   "sessionRecoveryPassword": "Recovery Password",
   "set": "Set",
