feat: added new hide recovery password modal
when we turn on the setting we prevent any recovery phrase ui from loading and return null

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -426,6 +426,8 @@
   "recoveryPasswordErrorMessageIncorrect": "Some of the words in your Recovery Password are incorrect. Please check and try again.",
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
   "recoveryPasswordHidePermanently": "Hide Recovery Password Permanently",
+  "recoveryPasswordHidePermanentlyDescription1": "Without your recovery password, you cannot load your account on new devices. <br /><br />We strongly recommend you save your recovery password in a safe and secure place before continuing.",
+  "recoveryPasswordHidePermanentlyDescription2": "Are you sure you want to permanently hide your recovery password on this device? This cannot be undone.",
   "recoveryPasswordHideRecoveryPasswordDescription": "Permanently hide your recover password on this device.",
   "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
   "recoveryPhraseSavePromptMain": "Your recovery password is the master key to your Account ID — you can use it to restore your Account ID if you lose access to your device. Store your recovery password in a safe place, and don't give it to anyone.",
@@ -585,6 +587,7 @@
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
+  "yes": "Yes",
   "yesterday": "Yesterday",
   "you": "You",
   "youChangedTheTimer": "<b>You</b> have set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
