--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -381,6 +381,7 @@
   "orJoinOneOfThese": "Or join one of these...",
   "otherPlural": "$number$ others",
   "otherSingular": "$number$ other",
+  "passwordView": "View as Password",
   "passwordCharacterError": "Password must only contain letters, numbers and symbols",
   "passwordCreate": "Create your password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
@@ -406,6 +407,7 @@
   "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "pruneSettingTitle": "Trim Communities",
   "publicChatExists": "You are already connected to this community",
+  "qrView": "View QR",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
