feat: added filters to convo and contact query
search screen only shows contacts and not convos

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -106,7 +106,6 @@
   "contextMenuNoSuggestions": "No Suggestions",
   "continue": "Continue",
   "conversationId": "Conversation ID",
-  "conversationsHeader": "Contacts and Groups: $count$",
   "conversationsNone": "You don't have any conversations yet",
   "conversationsSettingsTitle": "Conversations",
   "copiedToClipboard": "Copied",
@@ -295,6 +294,7 @@
   "mediaPermissionsTitle": "Microphone",
   "members": "$count$ members",
   "message": "Message",
+  "messages": "Messages",
   "messageBody": "Message body",
   "messageBodyMissing": "Please enter a message body.",
   "messageDeletedPlaceholder": "This message has been deleted",
@@ -459,13 +459,13 @@
   "saveRecoveryPasswordDescription": "Save your recovery password to make sure you don't lose access to your account.",
   "searchFor...": "Search conversations and contacts",
   "searchForContactsOnly": "Search for contacts",
-  "searchMessagesHeader": "Messages: $count$",
   "selectMessage": "Select message",
   "sendFailed": "Send Failed",
   "sending": "Sending",
   "sendMessage": "Message",
   "sent": "Sent",
   "serverId": "Server ID",
+  "sessionConversations": "Conversations",
   "sessionInviteAFriend": "Invite a Friend",
   "sessionInviteAFriendDescription": "Copy your Account ID then share it with your friends so they can message you.",
   "sessionInviteAFriendIDCopied": "Share with your friends wherever you usually speak with them — then move the conversation here.",
