fix: since the pass hash is in the items table we can call it from storage
added storage function getPasswordHash and use everywhere, warn user to restart the app

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -70,7 +70,7 @@
   "changePassword": "Change Password",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "changePasswordTitle": "Password Changed",
-  "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
+  "changePasswordToastDescription": "Your password has been changed. Please keep it safe and restart Session.",
   "chooseAnAction": "Choose an action to start a conversation",
   "classicDarkThemeTitle": "Classic Dark",
   "classicLightThemeTitle": "Classic Light",
@@ -440,7 +440,7 @@
   "removePassword": "Remove Password",
   "removePasswordInvalid": "Incorrect password",
   "removePasswordTitle": "Password Removed",
-  "removePasswordToastDescription": "Your password has been removed.",
+  "removePasswordToastDescription": "Your password has been removed. Please restart Session.",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "replyingToMessage": "Replying to:",
   "replyToMessage": "Reply",
@@ -477,7 +477,7 @@
   "setPasswordFail": "Failed to set password",
   "setPasswordInvalid": "Passwords do not match",
   "setPasswordTitle": "Password Set",
-  "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
+  "setPasswordToastDescription": "Your password has been set. Please keep it safe and restart Session",
   "settingAppliesToEveryone": "This setting applies to everyone in this conversation.",
   "settingAppliesToYourMessages": "This setting applies to messages you send in this conversation.",
   "settingsHeader": "Settings",
