feat: cleaned up accept/block/decline logic

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -572,7 +572,7 @@
   "messageRequestAcceptedOursNoName": "You have accepted the message request",
   "declineRequestMessage": "Are you sure you want to decline this message request?",
   "deleteGroupRequest": "Are you sure you want to delete this group invite?",
-  "deleteGroupRequestAndBlock": "Are you sure you want to block <b>$name$</b>? Blocked users cannot send you message requests, group invites or call you.",
+  "deleteGroupRequestAndBlock": "Are you sure you want to block <b>$name$</b>?<br/>Blocked users cannot send you message requests, group invites or call you.",
   "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
   "respondingToGroupRequestWarning": "Sending a message to this group will automatically accept the group invite.",
   "userInvitedYouToGroup": "<b>$name$</b> invited you to join <b>$groupName$</b>.",
@@ -584,7 +584,7 @@
   "mustBeApproved": "This conversation must be accepted to use this feature",
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
-  "clearAllConfirmationBody": "Are you sure you want to clear all message and group requests?",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message requests and group invites?",
   "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
