feat: added quit modal
when going back during critical onboarding steps it's better to restart the app entirely

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -360,6 +360,8 @@
   "onboardingAccountCreate": "Create account",
   "onboardingAccountCreated": "Account Created",
   "onboardingAccountExists": "I have an account",
+  "onboardingBackAccountCreation": "You cannot go back further. In order to cancel your account creation, Session needs to quit.",
+  "onboardingBackLoadAccount": "You cannot go back further. In order to stop loading your account, Session needs to quit.",
   "onboardingBubbleWelcomeToSession": "Welcome to Session",
   "onboardingHitThePlusButton": "Hit the plus button to start a chat, create a group, or join an official community!",
   "onboardingRecoveryPassword": "Enter your recovery password to load your account. If you haven't saved it, you can find it in your app settings.",
@@ -408,6 +410,7 @@
   "pruneSettingTitle": "Trim Communities",
   "publicChatExists": "You are already connected to this community",
   "qrView": "View QR",
+  "quitButton": "Quit",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
