--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -494,8 +494,9 @@
   "device": "Device",
   "destination": "Destination",
   "learnMore": "Learn more",
-  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningTitle": "Open URL",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "copyUrl": "Copy URL",
   "open": "Open",
   "audioMessageAutoplayTitle": "Autoplay Audio Messages",
   "audioMessageAutoplayDescription": "Autoplay consecutive audio messages.",
