fix: setting the password no longer requires a restart
make sure to set the password hash on storage after the database is updated

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -69,8 +69,9 @@
   "changeNicknameMessage": "Enter a nickname for this user",
   "changePassword": "Change Password",
   "changePasswordInvalid": "The old password you entered is incorrect",
+  "changePasswordFail": "Failed to change password",
   "changePasswordTitle": "Password Changed",
-  "changePasswordToastDescription": "Your password has been changed. Please keep it safe and restart Session.",
+  "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "chooseAnAction": "Choose an action to start a conversation",
   "classicDarkThemeTitle": "Classic Dark",
   "classicLightThemeTitle": "Classic Light",
@@ -442,8 +443,9 @@
   "removeModerators": "Remove Admins",
   "removePassword": "Remove Password",
   "removePasswordInvalid": "Incorrect password",
+  "removePasswordFail": "Failed to remove password",
   "removePasswordTitle": "Password Removed",
-  "removePasswordToastDescription": "Your password has been removed. Please restart Session.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "replyingToMessage": "Replying to:",
   "replyToMessage": "Reply",
@@ -480,7 +482,7 @@
   "setPasswordFail": "Failed to set password",
   "setPasswordInvalid": "Passwords do not match",
   "setPasswordTitle": "Password Set",
-  "setPasswordToastDescription": "Your password has been set. Please keep it safe and restart Session",
+  "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "settingAppliesToEveryone": "This setting applies to everyone in this conversation.",
   "settingAppliesToYourMessages": "This setting applies to messages you send in this conversation.",
   "settingsHeader": "Settings",
