fix: localise some headings on the about window

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -95,6 +95,7 @@
   "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
   "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
+  "commitHashDesktop": "Commit Hash: $hash$",
   "confirm": "Confirm",
   "confirmNewPassword": "Confirm new password",
   "confirmPassword": "Confirm password",
@@ -503,6 +504,7 @@
   "startInTrayTitle": "Keep in System Tray",
   "support": "Support",
   "surveyTitle": "We'd Love Your Feedback",
+  "systemInformationDesktop": "System Information: $information$",
   "termsOfService": "Terms of Service",
   "themesSettingTitle": "Themes",
   "theyChangedTheTimer": "<b>$name$</b> has set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
