chore: latest crowdin fetch

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,4 +1,5 @@
 {
+  "Notifications - Muted": "notificationsHeaderMute",
   "about": "About",
   "accept": "Accept",
   "accountIDCopy": "Copy Account ID",
@@ -154,7 +155,7 @@
   "callsVoiceAndVideo": "Voice and Video Calls",
   "callsVoiceAndVideoBeta": "Voice and Video Calls (Beta)",
   "callsVoiceAndVideoModalDescription": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls.",
-  "callsVoiceAndVideoToggleDescription": "Enables voice and video calls to and from other users",
+  "callsVoiceAndVideoToggleDescription": "Enables voice and video calls to and from other users.",
   "callsYouCalled": "You called {name}",
   "callsYouMissedCallPermissions": "You missed a call from <b>{name}</b> because you haven't enabled <b>Voice and Video Calls</b> in Privacy Settings.",
   "cameraErrorNotFound": "No camera found",
@@ -224,7 +225,7 @@
   "conversationsAddedToHome": "Added to home screen",
   "conversationsAudioMessages": "Audio Messages",
   "conversationsAutoplayAudioMessage": "Autoplay Audio Messages",
-  "conversationsAutoplayAudioMessageDescription": "Autoplay consecutively sent audio messages",
+  "conversationsAutoplayAudioMessageDescription": "Autoplay consecutively sent audio messages.",
   "conversationsBlockedContacts": "Blocked Contacts",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "Delete Conversation",
@@ -245,7 +246,7 @@
   "conversationsSendWithEnterKeyDescription": "Tapping the Enter Key will send message instead of starting a new line.",
   "conversationsSettingsAllMedia": "All Media",
   "conversationsSpellCheck": "Spell Check",
-  "conversationsSpellCheckDescription": "Enable spell check when typing messages",
+  "conversationsSpellCheckDescription": "Enable spell check when typing messages.",
   "conversationsStart": "Start Conversation",
   "copied": "Copied",
   "copy": "Copy",
@@ -315,6 +316,7 @@
   "disappearingMessagesTurnedOff": "<b>{name}</b> has turned disappearing messages off. Messages they send will no longer disappear.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> has turned disappearing messages <b>off</b>.",
   "disappearingMessagesTurnedOffYou": "<b>You</b> turned <b>off</b> disappearing messages. Messages you send will no longer disappear.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>You</b> turned <b>off</b> disappearing messages.",
   "disappearingMessagesTypeRead": "read",
   "disappearingMessagesTypeSent": "sent",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> updated disappearing message settings.",
@@ -564,6 +566,8 @@
   "notificationsFastModeDescription": "You'll be notified of new messages reliably and immediately using Google's notification Servers.",
   "notificationsFastModeDescriptionIos": "You'll be notified of new messages reliably and immediately using Apple's notification Servers.",
   "notificationsGoToDevice": "Go to device notification settings",
+  "notificationsHeaderAllMessages": "Notifications - All",
+  "notificationsHeaderMentionsOnly": "Notifications - Mentions Only",
   "notificationsIosGroup": "{name} to {conversation_name}",
   "notificationsIosRestart": "You may have received messages while your {device} was restarting.",
   "notificationsLedColor": "LED color",
@@ -619,7 +623,7 @@
   "passwordCurrentIncorrect": "Your current password is incorrect.",
   "passwordDescription": "Require password to unlock {app_name}.",
   "passwordEnter": "Enter password",
-  "passwordEnterCurrent": "Please enter your current password.",
+  "passwordEnterCurrent": "Please enter your current password",
   "passwordEnterNew": "Please enter your new password",
   "passwordError": "Password must only contain letters, numbers and symbols",
   "passwordErrorLength": "Password must be between 6 and 64 characters long",
@@ -634,7 +638,7 @@
   "paste": "Paste",
   "permissionsAppleMusic": "{app_name} needs to use Apple Music to play media attachments.",
   "permissionsAutoUpdate": "Auto Update",
-  "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
+  "permissionsAutoUpdateDescription": "Automatically check for updates on startup.",
   "permissionsFaceId": "The screen lock feature on {app_name} uses Face ID.",
   "permissionsKeepInSystemTray": "Keep in System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} continues running in the background when you close the window",
@@ -643,10 +647,10 @@
   "permissionsMicrophoneAccessRequired": "{app_name} needs microphone access to send audio messages, but it has been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Microphone\".",
   "permissionsMicrophoneAccessRequiredDesktop": "You can enable microphone access in {app_name}'s privacy settings",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} needs microphone access to make calls and record audio messages.",
-  "permissionsMicrophoneDescription": "Allow access to microphone",
+  "permissionsMicrophoneDescription": "Allow access to microphone.",
   "permissionsRequired": "Permission required",
   "permissionsStorageDenied": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Files and media\" on.",
-  "permissionsStorageDeniedLegacy ": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} needs storage access to save attachments and media.",
   "permissionsStorageSaveDenied": "{app_name} needs storage access to save photos and videos, but it has been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Storage\".",
   "permissionsStorageSend": "{app_name} needs storage access to send photos and videos.",
@@ -689,7 +693,7 @@
   "recoveryPasswordHidePermanentlyDescription1": "Without your recovery password, you cannot load your account on new devices. <br/><br/>We strongly recommend you save your recovery password in a safe and secure place before continuing.",
   "recoveryPasswordHidePermanentlyDescription2": "Are you sure you want to permanently hide your recovery password on this device? This cannot be undone.",
   "recoveryPasswordHideRecoveryPassword": "Hide Recovery Password",
-  "recoveryPasswordHideRecoveryPasswordDescription": "Permanently hide your recover password on this device.",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Permanently hide your recovery password on this device.",
   "recoveryPasswordRestoreDescription": "Enter your recovery password to load your account. If you haven't saved it, you can find it in your app settings.",
   "recoveryPasswordView": "View Password",
   "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
@@ -742,7 +746,7 @@
   "shareAccountIdDescription": "Invite your friend to chat with you on {app_name} by sharing your Account ID with them.",
   "shareAccountIdDescriptionCopied": "Share with your friends wherever you usually speak with them — then move the conversation here.",
   "shareExtensionDatabaseError": "There is an issue opening the database. Please restart the app and try again.",
-  "shareToSession": "Share to {app_Name}",
+  "shareToSession": "Share to {app_name}",
   "show": "Show",
   "showAll": "Show All",
   "showLess": "Show Less",
@@ -754,7 +758,7 @@
   "theError": "Error",
   "tryAgain": "Try Again",
   "typingIndicators": "Typing Indicators",
-  "typingIndicatorsDescription": "See and share typing indicators",
+  "typingIndicatorsDescription": "See and share typing indicators.",
   "undo": "Undo",
   "unknown": "Unknown",
   "updateApp": "App updates",
