--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,5 +1,4 @@
 {
-  "Notifications - Muted": "notificationsHeaderMute",
   "about": "About",
   "accept": "Accept",
   "accountIDCopy": "Copy Account ID",
@@ -299,11 +298,14 @@
   "disappearingMessagesDeleteType": "Delete Type",
   "disappearingMessagesDescription": "This setting applies to everyone in this conversation.",
   "disappearingMessagesDescription1": "This setting applies to messages you send in this conversation.",
+  "disappearingMessagesDescriptionGroup": "This setting applies to everyone in this conversation.<br/>Only group admins can change this setting.",
   "disappearingMessagesDisappear": "Disappear After {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Disappear After Read",
   "disappearingMessagesDisappearAfterReadDescription": "Messages delete after they have been read.",
+  "disappearingMessagesDisappearAfterReadState": "Disappear After Read - {time}",
   "disappearingMessagesDisappearAfterSend": "Disappear After Send",
   "disappearingMessagesDisappearAfterSendDescription": "Messages delete after they have been sent.",
+  "disappearingMessagesDisappearAfterSendState": "Disappear After Send - {time}",
   "disappearingMessagesFollowSetting": "Follow Setting",
   "disappearingMessagesFollowSettingOff": "Messages you send will no longer disappear. Are you sure you want to turn <b>off</b> disappearing messages?",
   "disappearingMessagesFollowSettingOn": "Set your messages to disappear <b>{time}</b> after they have been <b>{disappearing_messages_type}</b>?",
@@ -395,8 +397,8 @@
   "groupInviteYouAndMoreNew": "<b>You</b> and <b>{count} others</b> were invited to join the group.",
   "groupInviteYouAndOtherNew": "<b>You</b> and <b>{other_name}</b> were invited to join the group.",
   "groupLeave": "Leave Group",
-  "groupLeaveDescription": "Are you sure you want to leave {group_name}?",
-  "groupLeaveDescriptionAdmin": "Are you sure you want to leave {group_name}? This will deactivate the group for all members.",
+  "groupLeaveDescription": "Are you sure you want to leave <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "Are you sure you want to leave <b>{group_name}</b>?<br/><br/>This will remove all members and delete all group content.",
   "groupLeaveErrorFailed": "Failed to leave {group_name}",
   "groupLegacyBanner": "Groups have been upgraded, create a new group to upgrade. Old group functionality will be degraded from {date}.",
   "groupMemberLeft": "<b>{name}</b> left the group.",
@@ -523,7 +525,7 @@
   "messageRequestYouHaveAccepted": "You have accepted the message request from <b>{name}</b>.",
   "messageRequestsAcceptDescription": "Sending a message to this user will automatically accept their message request and reveal your Account ID.",
   "messageRequestsAccepted": "Your message request has been accepted.",
-  "messageRequestsClearAllExplanation": "Are you sure you want to clear all message and group invites?",
+  "messageRequestsClearAllExplanation": "Are you sure you want to clear all message requests and group invites?",
   "messageRequestsCommunities": "Community Message Requests",
   "messageRequestsCommunitiesDescription": "Allow message requests from Community conversations.",
   "messageRequestsDelete": "Are you sure you want to delete this message request?",
@@ -544,9 +546,9 @@
   "messages": "Messages",
   "minimize": "Minimize",
   "next": "Next",
-  "nicknameDescription": "Choose a nickname for {name}. This will appear to you in your one-to-one and group conversations.",
+  "nicknameDescription": "Choose a nickname for <b>{name}</b>. This will appear to you in your one-to-one and group conversations.",
   "nicknameEnter": "Enter nickname",
-  "nicknameRemove": "Remove nickname",
+  "nicknameRemove": "Remove Nickname",
   "nicknameSet": "Set Nickname",
   "no": "No",
   "noSuggestions": "No Suggestions",
@@ -568,6 +570,7 @@
   "notificationsGoToDevice": "Go to device notification settings",
   "notificationsHeaderAllMessages": "Notifications - All",
   "notificationsHeaderMentionsOnly": "Notifications - Mentions Only",
+  "notificationsHeaderMute": "Notifications - Muted",
   "notificationsIosGroup": "{name} to {conversation_name}",
   "notificationsIosRestart": "You may have received messages while your {device} was restarting.",
   "notificationsLedColor": "LED color",
@@ -639,12 +642,13 @@
   "permissionsAppleMusic": "{app_name} needs to use Apple Music to play media attachments.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup.",
+  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "The screen lock feature on {app_name} uses Face ID.",
   "permissionsKeepInSystemTray": "Keep in System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} continues running in the background when you close the window",
   "permissionsLibrary": "{app_name} needs photo library access to continue. You can enable access in the iOS settings.",
   "permissionsMicrophone": "Microphone",
-  "permissionsMicrophoneAccessRequired": "{app_name} needs microphone access to send audio messages, but it has been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Microphone\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} needs microphone access to make calls and send audio messages, but it has been permanently denied. Tap settings -> Permissions, and turn \"Microphone\" on.",
   "permissionsMicrophoneAccessRequiredDesktop": "You can enable microphone access in {app_name}'s privacy settings",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} needs microphone access to make calls and record audio messages.",
   "permissionsMicrophoneDescription": "Allow access to microphone.",
