--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -639,6 +639,7 @@
   "passwordSet": "Set Password",
   "passwordSetDescription": "Your password has been set. Please keep it safe.",
   "paste": "Paste",
+  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name} needs to use Apple Music to play media attachments.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup.",
@@ -652,8 +653,9 @@
   "permissionsMicrophoneAccessRequiredDesktop": "You can enable microphone access in {app_name}'s privacy settings",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} needs microphone access to make calls and record audio messages.",
   "permissionsMicrophoneDescription": "Allow access to microphone.",
+  "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "Permission required",
-  "permissionsStorageDenied": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Files and media\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
   "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} needs storage access to save attachments and media.",
   "permissionsStorageSaveDenied": "{app_name} needs storage access to save photos and videos, but it has been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Storage\".",
